[package]
name = "turing-smart-screen"
description = "Rust driver for the Turing Smart Screen"
version = "1.0.0"
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/easyguard/turing-smart-screen-rs"
keywords = ["screen", "driver", "graphics"]

[dependencies]
image = "0.25.5"
rand = "0.8.5"
rgb565 = "0.1.3"
rusttype = "0.9.3"
serialport = "4.6.1"
thiserror = "2.0.10"
